fix alignment bug in loginscreen

--- a/style.css
+++ b/style.css
@@ -12,17 +12,18 @@ html, body {
 
 #unauthorized {
 	position: fixed;
-	top: 0;
-	text-align: center;
 	width: 100%;
 	height: 100%;
-	margin: 0;
-	padding: 0;
 	background: url('wallpaper.png') repeat center center fixed;
 }
 
 #welcome {
-	margin-top: 17%;
+	text-align: center;
+	left: 50%;
+	width: 400px;
+	margin-left: -200px;
+	position: absolute;
+	top: 30%;
 }
 
 #authorized {
